Integrated 2factor.in

--- a/.env.example
+++ b/.env.example
@@ -19,9 +19,12 @@ ADMIN_EMAIL=admin@gamca.in
 FROM_EMAIL=noreply@gamca.in
 FROM_NAME=GAMCA Medical Services
 
-# SMS API Configuration (for OTP)
-SMS_API_KEY=your_sms_api_key
-SMS_API_URL=your_sms_api_url
+# 2factor.in SMS API Configuration (for OTP)
+TWOFACTOR_API_KEY=your_2factor_api_key_here
+TWOFACTOR_TEMPLATE=AUTOGEN2
+
+# Development Settings
+BYPASS_PHONE_VERIFICATION=false
 
 # Next.js Configuration
 NEXTAUTH_URL=http://localhost:3000
