--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-dom": "^18.3.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.4.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "cheerio":"1.1.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.0",
