--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.0",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^17.2.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
@@ -40,13 +41,13 @@
     "react-dom": "^18.3.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.4.0",
-    "uuid": "^10.0.0",
-    "cheerio":"1.0.0"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.0",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
+    "@types/cheerio": "^0.22.35",
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
