--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URL=postgresql://username:password@localhost:5432/gamcapp
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/gamcapp
 
 # RazorPay Configuration
 RAZORPAY_KEY_ID=your_razorpay_key_id
@@ -15,8 +15,8 @@ SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=your_email@gmail.com
 SMTP_PASS=your_app_password
-ADMIN_EMAIL=admin@gamca.in
-FROM_EMAIL=noreply@gamca.in
+ADMIN_EMAIL=admin@gamca-wafid.com
+FROM_EMAIL=noreply@gamca-wafid.com
 FROM_NAME=GAMCA Medical Services
 
 # 2factor.in SMS API Configuration (for OTP)
