--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -163,6 +163,19 @@ jobs:
           echo "RAZORPAY_KEY_ID=${{ env.RAZORPAY_KEY_ID }}" >> deployment/backend/.env
           echo "RAZORPAY_KEY_SECRET=${{ env.RAZORPAY_KEY_SECRET }}" >> deployment/backend/.env
           echo "FRONTEND_URL=${{ env.FRONTEND_URL }}" >> deployment/backend/.env
+          echo "SMTP_HOST=${{ env.SMTP_HOST }}" >> deployment/backend/.env
+          echo "SMTP_PORT=${{ env.SMTP_PORT }}" >> deployment/backend/.env
+          echo "SMTP_SECURE=${{ env.SMTP_SECURE }}" >> deployment/backend/.env
+          echo "SMTP_USER=${{ env.SMTP_USER }}" >> deployment/backend/.env
+          echo "SMTP_PASS=${{ env.SMTP_PASS }}" >> deployment/backend/.env
+          echo "ADMIN_EMAIL=${{ env.ADMIN_EMAIL }}" >> deployment/backend/.env
+          echo "FROM_EMAIL=${{ env.FROM_EMAIL }}" >> deployment/backend/.env
+          echo "FROM_NAME=${{ env.FROM_NAME }}" >> deployment/backend/.env
+          echo "BYPASS_PHONE_VERIFICATION=true" >> deployment/backend/.env
+          echo "FTP_HOST=${{ env.FTP_HOST }}" >> deployment/backend/.env
+          echo "FTP_USERNAME=${{ env.FTP_USERNAME }}" >> deployment/backend/.env
+          echo "FTP_PASSWORD=${{ env.FTP_PASSWORD }}" >> deployment/backend/.env
+          
 
       - name: Deploy to Hostinger via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
