--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -22,10 +22,10 @@ env:
   ADMIN_EMAIL: ${{ vars.ADMIN_EMAIL }}
   FROM_EMAIL: ${{ vars.FROM_EMAIL }}
   FROM_NAME: ${{ vars.FROM_NAME }}
-  DB_HOST: ${{ secrets.DB_HOST }}
-  DB_PORT: ${{ secrets.DB_PORT }}
-  DB_NAME: ${{ secrets.DB_NAME }}
-  DB_USER: ${{ secrets.DB_USER }}
+  DB_HOST: ${{ var.DB_HOST }}
+  DB_PORT: ${{ var.DB_PORT }}
+  DB_NAME: ${{ var.DB_NAME }}
+  DB_USER: ${{ var.DB_USER }}
   DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
   JWT_SECRET: ${{ secrets.JWT_SECRET }}
   FRONTEND_URL: ${{ vars.FRONTEND_URL }}
