--- a/apache-config/.htaccess
+++ b/apache-config/.htaccess
@@ -3,6 +3,11 @@
 
 RewriteEngine On
 
+# Handle direct backend access (for debugging and direct PHP file access)
+RewriteCond %{REQUEST_URI} ^/backend/
+RewriteCond %{REQUEST_FILENAME} -f
+RewriteRule ^backend/(.*)$ backend/$1 [L]
+
 # Handle API requests - forward to backend with query parameter
 RewriteRule ^api/(.*)$ backend/public/index.php?api_path=$1 [L,QSA]
 
@@ -10,6 +15,7 @@ RewriteRule ^api/(.*)$ backend/public/index.php?api_path=$1 [L,QSA]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} !^/api
+RewriteCond %{REQUEST_URI} !^/backend/
 RewriteRule . /index.html [L]
 
 # Security headers
