Syntax error in env file

--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -170,24 +170,25 @@ jobs:
             cp minimal-backend-index.php deployment/frontend/
             cp fix-permissions.php deployment/frontend/
             cp api.php deployment/frontend/
+            cp env-diagnostic.php deployment/frontend/
  
             # Create environment file for development
            echo "DB_HOST=${{ env.DB_HOST }}" >> deployment/backend/.env
            echo "DB_PORT=${{ env.DB_PORT }}" >> deployment/backend/.env
            echo "DB_NAME=${{ env.DB_NAME }}" >> deployment/backend/.env
            echo "DB_USER=${{ env.DB_USER }}" >> deployment/backend/.env
-           echo "DB_PASSWORD=${{ env.DB_PASSWORD }}" >> deployment/backend/.env
-           echo "JWT_SECRET=${{ env.JWT_SECRET }}" >> deployment/backend/.env
+            echo "DB_PASSWORD=\"${{ env.DB_PASSWORD }}\"" >> deployment/backend/.env
+            echo "JWT_SECRET=\"${{ env.JWT_SECRET }}\"" >> deployment/backend/.env
            echo "APP_ENV=development" >> deployment/backend/.env
            echo "RAZORPAY_KEY_ID=${{ env.RAZORPAY_KEY_ID }}" >> deployment/backend/.env
-           echo "RAZORPAY_KEY_SECRET=${{ env.RAZORPAY_KEY_SECRET }}" >> deployment/backend/.env
+            echo "RAZORPAY_KEY_SECRET=\"${{ env.RAZORPAY_KEY_SECRET }}\"" >> deployment/backend/.env
            echo "FRONTEND_URL=${{ env.FRONTEND_URL }}" >> deployment/backend/.env
            echo "SMTP_HOST=${{ env.SMTP_HOST }}" >> deployment/backend/.env
            echo "SMTP_PORT=${{ env.SMTP_PORT }}" >> deployment/backend/.env
            echo "SMTP_SECURE=${{ env.SMTP_SECURE }}" >> deployment/backend/.env
            echo "ADMIN_EMAIL=${{ env.ADMIN_EMAIL }}" >> deployment/backend/.env
            echo "FROM_EMAIL=${{ env.FROM_EMAIL }}" >> deployment/backend/.env
-           echo "FROM_NAME=${{ env.FROM_NAME }}" >> deployment/backend/.env
+            echo "FROM_NAME=\"${{ env.FROM_NAME }}\"" >> deployment/backend/.env
            echo "BYPASS_PHONE_VERIFICATION=true" >> deployment/backend/.env
           
       - name: Deploy Backend to Secure Location (Dev)
@@ -397,16 +398,17 @@ jobs:
             cp minimal-backend-index.php deployment/frontend/
             cp fix-permissions.php deployment/frontend/
             cp api.php deployment/frontend/
+            cp env-diagnostic.php deployment/frontend/
            # Create environment file for production
           echo "DB_HOST=${{ env.DB_HOST }}" >> deployment/backend/.env
           echo "DB_PORT=${{ env.DB_PORT }}" >> deployment/backend/.env
           echo "DB_NAME=${{ env.DB_NAME }}" >> deployment/backend/.env
           echo "DB_USER=${{ env.DB_USER }}" >> deployment/backend/.env
           echo "DB_PASSWORD=${{ env.DB_PASSWORD }}" >> deployment/backend/.env
-          echo "JWT_SECRET=${{ env.JWT_SECRET }}" >> deployment/backend/.env
+          echo "JWT_SECRET=\"${{ env.JWT_SECRET }}\"" >> deployment/backend/.env
           echo "APP_ENV=production" >> deployment/backend/.env
           echo "RAZORPAY_KEY_ID=${{ env.RAZORPAY_KEY_ID }}" >> deployment/backend/.env
-          echo "RAZORPAY_KEY_SECRET=${{ env.RAZORPAY_KEY_SECRET }}" >> deployment/backend/.env
+          echo "RAZORPAY_KEY_SECRET=\"${{ env.RAZORPAY_KEY_SECRET }}\"" >> deployment/backend/.env
           echo "FRONTEND_URL=${{ env.FRONTEND_URL }}" >> deployment/backend/.env
           echo "SMTP_HOST=${{ env.SMTP_HOST }}" >> deployment/backend/.env
           echo "SMTP_PORT=${{ env.SMTP_PORT }}" >> deployment/backend/.env
@@ -415,7 +417,7 @@ jobs:
           echo "SMTP_PASS=${{ env.SMTP_PASS }}" >> deployment/backend/.env
           echo "ADMIN_EMAIL=${{ env.ADMIN_EMAIL }}" >> deployment/backend/.env
           echo "FROM_EMAIL=${{ env.FROM_EMAIL }}" >> deployment/backend/.env
-          echo "FROM_NAME=${{ env.FROM_NAME }}" >> deployment/backend/.env
+          echo "FROM_NAME=\"${{ env.FROM_NAME }}\"" >> deployment/backend/.env
           echo "BYPASS_PHONE_VERIFICATION=true" >> deployment/backend/.env
           echo "FTP_HOST=${{ env.FTP_HOST }}" >> deployment/backend/.env
           echo "FTP_USERNAME=${{ env.FTP_USERNAME }}" >> deployment/backend/.env
