--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,4 +24,4 @@ SMTP_USER=anilgs@gmail.com
 SMTP_PASS=edjy zllu acun dqin
 ADMIN_EMAIL=admin@gamca-wafid.com
 FROM_EMAIL=noreply@gamca-wafid.com
-FROM_NAME=GAMCA Medical Services
+FROM_NAME="GAMCA Medical Services"
