Added email otp verification

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,8 +13,12 @@ RAZORPAY_KEY_SECRET=your_razorpay_key_secret
 
 FRONTEND_URL=https://yourdomain.com
 
-# Optional: Phone verification bypass for development
-BYPASS_PHONE_VERIFICATION=true
+# Optional: OTP verification bypass for development (applies to both email and phone)
+BYPASS_OTP_VERIFICATION=false
+
+# Verification method configuration (email or phone)
+# Note: This is configurable via environment variable, not UI
+DEFAULT_VERIFICATION_METHOD=email
 
 # Email Configuration
 SMTP_HOST=smtp.gmail.com
