Fix passport_number NOT NULL constraint causing 500 error
- Add migration to make passport_number nullable
- Update User model to handle null passport numbers
- Provide temporary passport number for new users during registration
- Update deployment workflow to run passport nullable migration
- Resolves 500 internal server error during OTP verification

This allows phased user registration where users verify email first
and provide passport details later in the appointment form.

--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -340,8 +340,14 @@ jobs:
             echo "Running OTP table migration..."
             mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
                   "${{ env.DB_NAME }}" < backend/database/migrate_otp_table.sql
-            echo "OTP table migration completed"
-          fi
+             echo "OTP table migration completed"
+           fi
+           if [ -f "backend/database/migrate_passport_nullable.sql" ]; then
+             echo "Running passport nullable migration..."
+             mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
+                   "${{ env.DB_NAME }}" < backend/database/migrate_passport_nullable.sql
+             echo "Passport nullable migration completed"
+           fi
 
   deploy-production:
     name: Deploy to Production
@@ -665,8 +671,14 @@ jobs:
             echo "Running OTP table migration..."
             mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
                   "${{ env.DB_NAME }}" < backend/database/migrate_otp_table.sql
-            echo "OTP table migration completed"
-          fi
+             echo "OTP table migration completed"
+           fi
+           if [ -f "backend/database/migrate_passport_nullable.sql" ]; then
+             echo "Running passport nullable migration..."
+             mysql -h"${{ env.DB_HOST }}" -P"${{ env.DB_PORT }}" -u"${{ env.DB_USER }}" -p"${{ env.DB_PASSWORD }}" \
+                   "${{ env.DB_NAME }}" < backend/database/migrate_passport_nullable.sql
+             echo "Passport nullable migration completed"
+           fi
 
       - name: Setup PHP Environment (Post-Deployment)
         run: |
