Added appointment table and logging

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -29,3 +29,7 @@ SMTP_PASS=edjy zllu acun dqin
 ADMIN_EMAIL=admin@gamca-wafid.com
 FROM_EMAIL=noreply@gamca-wafid.com
 FROM_NAME="GAMCA Medical Services"
+
+# Logging Configuration
+LOG_MAX_SIZE=104857600
+LOG_STORE_DURATION=2592000
